WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189575
[Win][Clang] error: type 'float' cannot be narrowed to 'LONG' (aka 'long') in initializer list in WheelEventWin.cpp
https://bugs.webkit.org/show_bug.cgi?id=189575
Summary
[Win][Clang] error: type 'float' cannot be narrowed to 'LONG' (aka 'long') in...
Fujii Hironori
Reported
2018-09-12 22:21:34 PDT
[Win][Clang] error: type 'float' cannot be narrowed to 'LONG' (aka 'long') in initializer list in WheelEventWin.cpp While doing
Bug 171618
, the following compilation errors are reported.
> [5/664] Building CXX object Source\WebCore\CMakeFiles\WebCore.dir\platform\win\WheelEventWin.cpp.obj > FAILED: Source/WebCore/CMakeFiles/WebCore.dir/platform/win/WheelEventWin.cpp.obj > C:\tools\llvm\bin\clang-cl.exe (...) -c ..\..\Source\WebCore\platform\win\WheelEventWin.cpp > ..\..\Source\WebCore\platform\win\WheelEventWin.cpp(86,20): error: type 'float' cannot be narrowed to 'LONG' (aka 'long') in initializer list [-Wc++11-narrowing] > POINT point = {location.x(), location.y()}; > ^~~~~~~~~~~~ > ..\..\Source\WebCore\platform\win\WheelEventWin.cpp(86,20): note: insert an explicit cast to silence this issue > POINT point = {location.x(), location.y()}; > ^~~~~~~~~~~~ > static_cast<LONG>( ) > ..\..\Source\WebCore\platform\win\WheelEventWin.cpp(86,34): error: type 'float' cannot be narrowed to 'LONG' (aka 'long') in initializer list [-Wc++11-narrowing] > POINT point = {location.x(), location.y()}; > ^~~~~~~~~~~~ > ..\..\Source\WebCore\platform\win\WheelEventWin.cpp(86,34): note: insert an explicit cast to silence this issue > POINT point = {location.x(), location.y()}; > ^~~~~~~~~~~~ > static_cast<LONG>( ) > 2 errors generated.
Attachments
Patch
(1.82 KB, patch)
2018-09-12 22:25 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2018-09-12 22:25:17 PDT
Created
attachment 349628
[details]
Patch
WebKit Commit Bot
Comment 2
2018-09-13 09:43:53 PDT
Comment on
attachment 349628
[details]
Patch Clearing flags on attachment: 349628 Committed
r235975
: <
https://trac.webkit.org/changeset/235975
>
WebKit Commit Bot
Comment 3
2018-09-13 09:43:55 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-09-13 09:44:27 PDT
<
rdar://problem/44420761
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug