[Win][Clang] error: type 'float' cannot be narrowed to 'LONG' (aka 'long') in initializer list in WheelEventWin.cpp https://bugs.webkit.org/show_bug.cgi?id=189575

Reviewed by Alex Christensen.

No new tests (No behavior change).

* platform/win/WheelEventWin.cpp:
(WebCore::PlatformWheelEvent::PlatformWheelEvent): Use flooredIntPoint to convert FloatPoint to POINT.


Canonical link: https://commits.webkit.org/204555@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235975 268f45cc-cd09-0410-ab3c-d52691b4dbfc